fix quote format and responsiveness

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -62,7 +62,8 @@
     
     <section class="container-fluid px-0 quote">
             <div>
-                <p id="msQuote">"You miss 100% of the shots you don't take"</p>
+                <p id="msQuote">"You miss 100% of the shots you don't take.</p>
+                <p id="wayne">-Wayne Gretzky<span id="quoteMark">"</span></p> 
                 <p id="msSig">-Michael Scott</p>
             </div>
         
