--- a/homepage/about.html
+++ b/homepage/about.html
@@ -91,6 +91,8 @@
           </div>
         </div>
       </section>
-
+      <footer>
+        <p>Copyright © JIN 2023</p>
+    </footer>
     </body>
   </html>
