update wow info

--- a/homepage/about.html
+++ b/homepage/about.html
@@ -84,12 +84,26 @@
                 <img src="images/JIN-logos_white.png" alt="logo pic" class="d-none d-lg-inline watermark">
                 <p class="aboutInfo">I graduated from the University of Nebraska-Lincoln (Go Big Red-Huskers!) with a Master's degree in Mathematics.
                   I picked Math because I absolutely hate writing essays:) and this major requires less essay writing.
-
                 </p>
               </div>
             </div>
           </div>
         </div>
+        <div class="row align-items-center content ">
+          <div class="col-md-6 text-center">
+            <div class="row justify-content-center">
+              <div class="col-10 col-lg-8 mb-5 mb-md-0">
+                  <h1>I LOVED PLAYING WOW </h1>
+                  <img src="images/JIN-logos_white.png" alt="logo pic" class="d-none d-lg-inline watermark">
+              <p class="aboutInfo">During Covid, I started playing WoW to kill time. I made several good friends while playing. They helped me complete my first Heroic Raid within 5 months of playing. Sadly, I am no longer playing.
+              </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <img src="images/Meemoi.jpg" alt="a pic of my wow character" class="img-fluid">
+          </div>
+      </div>
       </section>
       <footer>
         <p>Copyright © JIN 2023</p>
