--- a/homepage/about.html
+++ b/homepage/about.html
@@ -83,7 +83,7 @@
                 <div class="col-10 col-lg-8 mb-5 mb-md-0">
                     <h1>I LOVE TABLE TENNIS </h1>
                     <img src="images/JIN-logos_white.png" alt="logo pic" class="d-none d-lg-inline watermark">
-                <p class="aboutInfo">I used to play table tennis at my local club five days a week before Covid time. I was determined to play at the terment level and get a national rating of 1000. Sadly,
+                <p class="aboutInfo">I used to play table tennis at my local club five days a week before Covid time. I was determined to play at the tournament level and get a national rating of 1000. Sadly,
                   I think I am still at 500-600 right now because I stopped going. Table tennis, like anything else, if you don't use it, you lose it. 
                 </p>
                 </div>
